<resources>
    <string name="app_name">经验</string>
    <string name="language">中文</string>
    <string name="NavigationComponents">Navigation组件(管理Fragment的切换)</string>
    <string name="PagingComponents">Paging组件(RecyclerView分页库)</string>
    <string name="WorkMangerComponents">WorkManger组件(后台任务库)</string>
    <string name="Data_BindingComponents">Data Binding组件(数据绑定)</string>
    <string name="DataStore">DataStore框架(数据储存)</string>

    <string name="QRCode_recognition">QRCode识别</string>
    <string name="Scan_code">扫码</string>
    <string name="camera">相机</string>
    <string name="Invasive_experience">侵入式体验(通知栏和导航栏控制)</string>
    <string name="Authorized_operation">授权操作</string>
    <string name="file_management">文件管理</string>
    <string name="media_management">媒体管理</string>
    <string name="download_management">下载管理</string>
    <string name="Database_operation">数据库操作</string>
    <string name="network">网络</string>
    <string name="WiFi_Direct">WIFI直连</string>
    <string name="app_management">app管理</string>

    <string name="Get_image">获取图片</string>
    <string name="Get_video">获取视频</string>

    <string name="Take_a_photo">拍照</string>
    <string name="Album">相册</string>

    <string name="determine">确定</string>
    <string name="look_over">查看</string>
    <string name="Preview">预览</string>
    <string name="Preview_d">预览(%1$d)</string>
    <string name="Preview_2d">预览(%1$d/%2$d)</string>
    <string name="Original_image">原图</string>
    <string name="select">选择</string>
    <string name="fileNameAndCount">%1$s(%2$s)</string>
    <string name="Loading">加载中…</string>
    <string name="Compressing_2d">正在压缩(%1$d/%2$d)</string>

    <string name="view">视图</string>
    <string name="PullDownToRefresh">下拉刷新,上拉加载更多</string>
    <string name="RecyclerView_use">RecyclerView的使用</string>
    <string name="Symmetric_and_asymmetric_encryption">对称和非对称加密</string>

    <string name="encryption">加密</string>
    <string name="Decrypt">解密</string>
    <string name="Plaintext">明文</string>
    <string name="Ciphertext">密文</string>
    <string name="publicKey">公共密钥</string>
    <string name="privateKey">私有密钥</string>
    <string name="Generate_key">生成密钥</string>
    <string name="Generate_asymmetric_keys">生成非对称密钥</string>


    <string name="There_is_no_application_that_can_open_this_file">没有可以打开此文件的应用程序!</string>
    <string name="File_has_been_downloaded">文件已经下载!</string>
    <string name="File_Download_in_progress">文件下载进行中!</string>
    <string name="File_download_waiting_to_start">文件下载等待启动!</string>

    <string name="add">添加</string>
    <string name="imageBrowse">图片浏览</string>

    <string name="Calendar_Data">日历数据</string>
    <string name="Contact_person">联系人</string>
    <string name="position">位置</string>
    <string name="microphone">麦克风</string>
    <string name="phone">电话</string>
    <string name="sensor">传感器</string>
    <string name="SMS">短信</string>
    <string name="storage">存储</string>
    <string name="retry">重试</string>
    <string name="no_more">没有更多!</string>
    <string name="network_anomaly">网络异常,请重试!</string>
    <string name="typeface">字体</string>
    <string name="s_projects">%1$s个项目</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="start_page" translatable="false">启动页</string>
    <string name="globalization">国际化</string>
    <string name="menu">菜单</string>
    <string name="domain_name">域名</string>


</resources>
