<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="main"
            type="com.sq26.experience.viewmodel.PermissionRequestViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.PermissionRequestFragment">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@={main.calendarData}"
                    android:text="@string/Calendar_Data" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@={main.camera}"
                    android:text="@string/camera" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@={main.contactPerson}"
                    android:text="@string/Contact_person" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@={main.position}"
                    android:text="@string/position" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@={main.microphone}"
                    android:text="@string/microphone" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@={main.phone}"
                    android:text="@string/phone" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@={main.sensor}"
                    android:text="@string/sensor" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@={main.SMS}"
                    android:text="@string/SMS" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@={main.storage}"
                    android:text="@string/storage" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/request"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="申请" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/requestFile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="申请所有文件权限" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/requestApkInstall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="申请apk安装权限" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>