<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.EncryptionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/keyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Key"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/plaintextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/keyLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/plaintext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Plaintext"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ciphertextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/plaintextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ciphertext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Ciphertext"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/timing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ciphertextLayout" />

        <Button
            android:id="@+id/encryption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encryption"
            app:layout_constraintEnd_toStartOf="@id/decrypt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timing" />


        <Button
            android:id="@+id/decrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Decrypt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/encryption"
            app:layout_constraintTop_toBottomOf="@id/timing" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>